# tanakinator2-api

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  schema.sql
migrations/2022-06-11-014508_create_questions/: up.sql
src/: db.rs  handler.rs  lib.rs  main.rs  models.rs  routes.rs  schema.rs
src/handler/: common.rs  mod.rs  question.rs  ui.rs
templates/: add.html  list.html
