[package]
name = "tanakinator2-api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
diesel = { version = "1.4.4", features = ["mysql"] }
dotenv = "0.15.0"
lazy_static = "1.4.0"
reqwest = "0.11.10"
serde = { version = "1.0.137", features = ["derive"] }
tera = "1"
